--- a/AC.css
+++ b/AC.css
@@ -1,4 +1,10 @@
 .start1{
 	font-family: Impact;
 	text-align: center;
+	font-size: 25px;
+}
+
+.start2{
+	font-family: Impact;
+	text-align: center;
 }
