--- a/AC.css
+++ b/AC.css
@@ -1,10 +1,9 @@
-.start1{
+.font1{
 	font-family: Impact;
 	text-align: center;
-	font-size: 25px;
 }
-
-.start2{
+.font2{
 	font-family: Impact;
 	text-align: center;
+	text-size: 30px;
 }
