--- a/AC.css
+++ b/AC.css
@@ -1,8 +1,8 @@
-.font1 {
+font1 {
 	font-family: Impact;
 	text-align: center;
 }
-.font2 {
+font2 {
 	font-family: Impact;
 	text-align: center;
 	text-size: 30px;
