--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
-start {
+.start {
 	font-family: Impact;
 	text-align: center;
 }
-middle {
+.middle {
 	font-family: Impact;
 	text-align: center;
 	text-size: 25px;
