--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,12 @@
 	text-align: center;
 	font-size: 20px;
 }
+.story {
+	font-family: Impact;
+	text-align: center;
+}
+.body {
+	font-family: Roboto;
+	text-align: left;
+	font-size: 20px;
+}
