--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,14 @@
 .start {
-	font-family: Impact;
+	font-family: Oswald;
 	text-align: center;
 }
 .middle {
-	font-family: Impact;
+	font-family: Oswald;
 	text-align: center;
 	font-size: 20px;
 }
 .story {
-	font-family: Impact;
+	font-family: Oswald;
 	text-align: center;
 }
 .text {
@@ -26,7 +26,7 @@ body {
 	padding: 15px;
 }
 .volume {
-	font-family: Impact;
+	font-family: Oswald;
 	text-align: left;
 	color: white;
 }
